Sutter Health/src/objects/Tool__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Tools used to store the external tools information</description>
    <fields>
        <fullName>SH_Browser_Notification_Description__c</fullName>
        <label>Browser Notification Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SH_Browser_Notification_Info_Link__c</fullName>
        <label>Browser Notification Info Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Browser_Notification_Title__c</fullName>
        <label>Browser Notification Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Is_Show_Browser_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Browser Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Is_Show_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_More_Information_Link__c</fullName>
        <label>More Information Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Not_Supported_Browser__c</fullName>
        <label>Not Supported Browser</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSIE</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Notification_Description__c</fullName>
        <label>Notification Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SH_Notification_Title__c</fullName>
        <label>Notification Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Tool_Link__c</fullName>
        <label>Tool Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tool</label>
    <pluralLabel>Tools</pluralLabel>
</CustomObject>